# ai-support-ticket-agent

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  README.zh-TW.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  config.py  database.py  evaluation.py  main.py  models.py
backend/scripts/: seed.py
backend/tests/: test_api.py
docs/: architecture.md  architecture.zh-TW.md  deployment.md  deployment.zh-TW.md
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/assets/: main.css
frontend/pages/: evaluations.vue  index.vue
frontend/types/: api.ts
frontend/utils/: api.ts
