[project]
name = "ai-support-ticket-agent-api"
version = "0.1.0"
description = "AI-assisted support ticket workflow API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.100,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
